--- a/BoardBloom/BoardBloom/Views/Shared/_BoardPreviewPartial.cshtml
+++ b/BoardBloom/BoardBloom/Views/Shared/_BoardPreviewPartial.cshtml
@@ -16,6 +16,9 @@
             }
         }
     }
+
+    var timeElapsed = DateTime.Now - Model.BloomBoards.First().BoardDate;
+    var formattedTimeElapsed = timeElapsed.Days > 0 ? $"{timeElapsed.Days} days ago" : $"{timeElapsed.Hours} hours ago";
 }
 
 <head>
@@ -27,19 +30,26 @@
     <div class="board-preview-card">
         @{
             var maxElements = blooms.Count > 4 ? 4 : blooms.Count;
-            @for(int i = 0; i < maxElements; i++)
+            @for (int i = 0; i < maxElements; i++)
             {
                 @Html.Partial("_BloomPreviewPartial", new BoardBloom.ViewModels.BloomsPreviewViewModel { Bloom = blooms[i], BoardId = Model.Id })
             }
-            @for(int i = maxElements; i < 4; i++)
+            @for (int i = maxElements; i < 4; i++)
             {
-               <div class="bloom-empty-preview"></div>
+                <div class="bloom-empty-preview"></div>
             }
         }
+        <div class="board-preview-overlay">
+            <p class="board-preview-overlay-title"></p>
+        </div>
     </div>
 
-    <div class="board-preview-overlay">
-        <p class="board-preview-overlay-title">@Model.Name</p>
+    <div class="board-bottom-info">
+        <p class="board-bottom-info-title">@Model.Name</p>
+        <div class="board-bottom-info-main">
+            <p class="board-bottom-info-counter">@blooms.Count blooms</p>
+            <p class="board-bottom-info-separator"></p>
+            <p class="board-bottom-time-passed">@formattedTimeElapsed</p>
+        </div>
     </div>
 </div>
-
