--- a/BoardBloom/BoardBloom/wwwroot/css/Boards/_BoardPreviewPartial.css
+++ b/BoardBloom/BoardBloom/wwwroot/css/Boards/_BoardPreviewPartial.css
@@ -2,7 +2,15 @@
     position: relative;
     width: 100%;
     height: 100%;
+    cursor: pointer;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+    border-radius: 12px;
 }
+
+    .board-preview-wrapper:hover {
+        transform: translateY(-4px);
+        box-shadow: 2px 2px 15px var(--accent-primary);
+    }
 
 .board-preview-card {
     display: grid;
@@ -15,6 +23,8 @@
     background-color: var(--background-primary);
     width: 100%;
     aspect-ratio: 1;
+    overflow: hidden;
+    position: relative;
 }
 
 .board-preview-overlay {
@@ -28,34 +38,23 @@
     height: 100%;
     border-radius: 12px;
     background-color: var(--hover-gray);
-    transition: all 0.5s;
-}
-
-.board-preview-overlay {
-    width: 100%;
-    height: 100%;
-    border-radius: 12px;
-    background-color: var(--hover-gray);
-    transition: all 0.5s;
-}
-
-.board-preview-wrapper:hover .board-preview-overlay {
-    display: flex;
-    cursor: pointer;
+    transition: all 0.3s ease;
 }
 
 .board-preview-overlay-title {
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 600;
     color: var(--content-white);
     text-align: center;
-    transition: all 0.5s;
-    width: 100%;
+    padding: 0 16px;
     word-wrap: break-word;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
-    padding: 0 16px;
+}
+
+.board-preview-card:hover .board-preview-overlay {
+    display: flex;
 }
 
 .bloom-empty-preview {
@@ -63,4 +62,60 @@
     height: 100%;
     background-color: var(--background-secondary);
     border-radius: 12px;
+}
+
+.board-bottom-info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: 100%;
+    padding: 8px;
+    border-radius: 0 0 12px 12px;
+}
+
+    .board-bottom-info * {
+        margin: 0;
+    }
+
+.board-bottom-info-main {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 4px;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
+.board-bottom-info-title {
+    font-size: 18px;
+    font-weight: 600;
+    color: var(--content-primary);
+    text-align: left;
+    transition: all 0.3s ease;
+}
+
+.board-bottom-info-counter {
+    font-size: 12px;
+    font-weight: 400;
+    color: var(--content-secondary);
+    text-align: left;
+    transition: all 0.3s ease;
+}
+
+.board-bottom-time-passed {
+    font-size: 12px;
+    font-weight: 400;
+    color: var(--content-secondary);
+    text-align: left;
+    transition: all 0.3s ease;
+}
+
+.board-bottom-info-separator {
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
+    background-color: var(--content-secondary);
+    margin: 0 4px;
 }
