--- a/BoardBloom/BoardBloom/wwwroot/css/Blooms/_BloomPreviewPartial.css
+++ b/BoardBloom/BoardBloom/wwwroot/css/Blooms/_BloomPreviewPartial.css
@@ -8,6 +8,7 @@
     border-radius: 12px;
     width: 100%;
     overflow: hidden; /* Ensures nothing spills out from the card */
+    transition: all 0.5s;
 }
 
 .bloom-preview-card * {
