--- a/BoardBloom/BoardBloom/wwwroot/css/Boards/_BoardPreviewPartial.css
+++ b/BoardBloom/BoardBloom/wwwroot/css/Boards/_BoardPreviewPartial.css
@@ -38,6 +38,7 @@
     height: 100%;
     border-radius: 12px;
     background-color: var(--hover-gray);
+    opacity: 0.1;
     transition: all 0.3s ease;
 }
 
